[package]
name = "cis_profile"
version = "0.3.1"
authors = ["Florian Merz <flomerz@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/mozilla-iam/cis_profile-rust"
documentation = "https://docs.rs/crate/cis_profile"
keywords = ["profiles", "mozilla", "IAM"]
categories = []
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "data/", "README.md", "LICENSE", "CODE_OF_CONDUCT.md"]

[features]
default = []
graphql = ["juniper"]
aws = ["rusoto_core", "rusoto_ssm"]
well_known = ["reqwest"]
vendored = ["openssl/vendored"]

[dependencies]
biscuit = "0.4"
ring = "0.16"
openssl = "0.10"
num-bigint = "0.2"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = { version = "1.0.32", features = ["preserve_order"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.5"
failure = "0.1"
failure_derive = "0.1"
lazy_static = "1.4"

juniper = { version = "0.14", optional = true }
rusoto_core = { version = "0.42", optional = true }
rusoto_ssm = { version = "0.42", optional = true }
reqwest = { version = "0.9", optional = true }

[dev-dependencies]
valico = "3.1"