[package]
name = "cis_profile"
version = "0.4.2"
authors = ["Florian Merz <me@fiji-flo.de>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/mozilla-iam/cis_profile-rust"
documentation = "https://docs.rs/crate/cis_profile"
keywords = ["profiles", "mozilla", "IAM"]
categories = []
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "data/", "README.md", "LICENSE", "CODE_OF_CONDUCT.md"]

[features]
default = []
graphql = ["juniper"]
aws = ["rusoto_core", "rusoto_ssm"]
well_known = ["reqwest"]
vendored = ["openssl/vendored"]

[dependencies]
dino_park_trust = { git = "https://github.com/mozilla-iam/dino-park-trust", tag = "0.0.7", version = "0.0.7" }
biscuit = "0.4"
ring = "0.16"
openssl = "0.10"
num-bigint = "0.2"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = { version = "1.0.32", features = ["preserve_order"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.5"
failure = "0.1"
failure_derive = "0.1"
lazy_static = "1.4"
futures = "0.3"

juniper = { version = "0.14", optional = true }
rusoto_core = { version = "0.43", optional = true }
rusoto_ssm = { version = "0.43", optional = true }
reqwest = { version = "0.10", optional = true, features = ["blocking", "json"] }

[dev-dependencies]
valico = "3.1"
tokio = "0.2"
