[package]
name = "cis_profile"
version = "0.6.1"
authors = ["Florian Merz <me@fiji-flo.de>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/mozilla-iam/cis_profile-rust"
documentation = "https://docs.rs/crate/cis_profile"
keywords = ["profiles", "mozilla", "IAM"]
categories = []
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "data/", "README.md", "LICENSE", "CODE_OF_CONDUCT.md"]

[features]
default = []
graphql = ["juniper"]
aws = ["rusoto_core", "rusoto_ssm"]
well_known = ["reqwest"]
vendored = ["openssl/vendored"]

[dependencies]
dino_park_trust = { git = "https://github.com/mozilla-iam/dino-park-trust", branch = "0.1", version = "0.1" }
biscuit = "0.5"
ring = "0.16"
openssl = "0.10"
num-bigint = "0.3"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = { version = "1.0.32", features = ["preserve_order"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.6"
thiserror = "1"
lazy_static = "1"
futures = "0.3"

juniper = { version = "0.15", optional = true }
rusoto_core = { version = "0.47", optional = true }
rusoto_ssm = { version = "0.47", optional = true }
reqwest = { version = "0.11", optional = true, features = ["json"] }

[dev-dependencies]
valico = "3"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
